--- a/wp-content/themes/understrap-child/sass/theme/partials/_layout_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_layout_styles.scss
@@ -3329,6 +3329,7 @@ color: $white;
 
 .background__categories_content{
   text-align: center;
+  position: relative;
   &:hover{
     .categories__content_caption{
       opacity: 1;
