--- a/wp-content/themes/understrap-child/sass/theme/partials/_type_style_variables.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_type_style_variables.scss
@@ -373,6 +373,10 @@ p {
     }
 
     &--home-hybrid {
+      @include mq('tablet'){
+      flex: 0 0 90%;
+      max-width: 90%;
+      }
       display: flex;
       flex: 0 0 83%;
       max-width: 83%;
