--- a/wp-content/themes/understrap-child/sass/theme/partials/_modules.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_modules.scss
@@ -648,7 +648,7 @@ button {
 .service-areas__link--jump                  { @include jump-button-basic(); margin: 0 auto; }
 .capabilites__link--jump                    { @include jump-button-basic(); margin: 5em auto; }
 .committment__link--jump                    { @include jump-button-basic(); margin: 0 auto; }
-.growth-article__link--jump                 { @include jump-button-basic(); margin: 0 auto; }
+.growth-article__link--jump                 { @include jump-button-basic(); margin: 0 auto; position: absolute; bottom: 6rem; flex: 0 0; }
 
 //* background page links
 .background-splash__link--jump              { @include jump-button-basic(); @include self-center(); }
@@ -1139,13 +1139,13 @@ button {
 
   .hr {
     &__title-headline {
-      min-height: 3rem;
+      min-height: 1.5rem;
       width: 100%;
       flex: 0 0 auto;
 
       &::after {
         top: 25%;
-        height: .5em;
+//         height: .5em;
         background: $primary;
       }
     }
