--- a/wp-content/themes/understrap-child/sass/theme/partials/_navbar.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_navbar.scss
@@ -37,7 +37,8 @@
     align-items: center;
     justify-content: space-between;
   }
-}
+
+  }
 
 
 // #main-menu{
@@ -97,6 +98,7 @@ margin-right: $navbar-padding-x; */
   display: flex;
   flex-direction: column; // cannot use `inherit` to get the `.navbar`s value
   padding-left: 0;
+  @include vr($padding-top: 2);
 
   list-style: none;
   background: $navbar-nav-background;
@@ -417,3 +419,8 @@ svg#bug {
      margin-left: 2rem; 
 }
 
+#navbarNavDropdown{
+  a{
+      @include vr($font-size: 4, $line-height: 3);
+  }
+}
